# python-docx

./: .gitignore  HISTORY.rst  pyproject.toml  requirements-test.txt
docx/: __init__.py  document.py
docx/opc/: compat.py
docx/oxml/: __init__.py  simpletypes.py  styles.py  table.py  xmlchemy.py
docx/oxml/text/: delrun.py  font.py  insrun.py  paragraph.py  parfmt.py  run.py
docx/text/: delrun.py  insrun.py  paragraph.py  parfmt.py  run.py
features/steps/: customprops.py  text.py
src/docx/: __init__.py  api.py  blkcntnr.py  document.py  table.py
src/docx/image/: __init__.py  emf.py
src/docx/opc/: constants.py  customprops.py  oxml.py  package.py
src/docx/opc/parts/: customprops.py
src/docx/oxml/: __init__.py  comments.py  customprops.py  footnotes.py  ns.py  numbering.py  shape.py  simpletypes.py  styles.py  table.py  xmlchemy.py
src/docx/oxml/text/: delrun.py  font.py  insrun.py  paragraph.py  parfmt.py  run.py
src/docx/parts/: comments.py  document.py  footnotes.py
src/docx/text/: delrun.py  font.py  insrun.py  paragraph.py  parfmt.py  run.py
tests/: test_section.py
tests/opc/: test_customprops.py
tests/opc/parts/: test_customprops.py
